tests/rosetta/transpiler/Clojure/averages-mean-time-of-day.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/averages-mean-time-of-day.clj:19:60).
Unable to resolve symbol: PI in this context

Full report at:
/tmp/clojure-13500662978713230849.edn
